--- a/files/styles.css
+++ b/files/styles.css
@@ -1,22 +1,28 @@
-body{
-    background-color:rgb(184, 184, 255);
-}
-.navbar1 , .footer{
-    color: rgb(240, 0, 0);
-    font-size: 20px;
-    font-weight: 700;
-    font-family: 'Cairo', sans-serif;
-    font-style: normal;
-    background-color: black;
-    border: 2px rgb(255, 0, 0) solid;
+
+
+section{
+  width: 200px;
+  background-color:  #d6e0f5 ;
+  border: 1px #000 solid ;
+  margin: 10px 10px 0 0;
+  padding: 10px;
 }
 
-.navbar1 .title {
-    font-size: 50px;
+section .tit-img{
+  font-family: 'Outfit', sans-serif;
+  font-size: 25px;
+  text-align: center ;
 }
 
-.my-image{
-    width: 200px;
-    height: 200px;
-    float: left;
+section .p-img{
+  font-family: 'Outfit', sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  text-align: center ;
+
+}
+
+section .img-1{
+  width: 200px;
+  height: 150px;
 }
