--- a/files/styles.css
+++ b/files/styles.css
@@ -1,28 +1,24 @@
-
-
-section{
-  width: 200px;
-  background-color:  #d6e0f5 ;
-  border: 1px #000 solid ;
-  margin: 10px 10px 0 0;
-  padding: 10px;
+body{
+  margin: 0;
+  padding: 0;
+}
+.navbar-1{
+  box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.75);
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
-section .tit-img{
+.navbar-1 .links {
+}
+
+.navbar-1 .links a{
+  color: #000;
+  text-decoration: none;
   font-family: 'Outfit', sans-serif;
-  font-size: 25px;
-  text-align: center ;
+  font-size: 16px;
+  margin: 0 5px;
 }
 
-section .p-img{
-  font-family: 'Outfit', sans-serif;
-  font-size: 12px;
-  font-weight: 300;
-  text-align: center ;
-
-}
-
-section .img-1{
-  width: 200px;
-  height: 150px;
-}
